Fix align number

--- a/styles/default.less
+++ b/styles/default.less
@@ -200,7 +200,7 @@ html {
               content: attr(data-number);
               font-size: 16px / 1.5;
               height: 16px * 1.5; width: 16px * 1.5;
-              line-height: (16px * 2) / 1.5;
+              line-height: 16px / 1.5 * 2.25;
               position: absolute;
                 top: -1px; left: -1px;
               vertical-align: middle;
